Bug 378095 - rocs-16.12.3 cannot export any graph on kde 5
Summary: rocs-16.12.3 cannot export any graph on kde 5
Status: RESOLVED FIXED
Alias: None
Product: Rocs
Classification: Applications
Component: UI (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Rocs Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-26 09:25 UTC by piotr5
Modified: 2017-05-26 15:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
dirty fix for ignoring the selected export filter (874 bytes, patch)
2017-03-26 09:25 UTC, piotr5
Details

Note You need to log in before you can comment on or make changes to this bug.
Description piotr5 2017-03-26 09:25:34 UTC
Created attachment 104738 [details]
dirty fix for ignoring the selected export filter

when exporting the console shows "Cannot export file:" along with the uri and the selected search-filter appended. the problem is also apparent by there being only a single search-filter available to select from, containing all file-suffixes supported and their translated description. in the code I see this section hasn't been ported to kde5 yet and claims it works -- it doesn't. I don't know how to program kde5, so I prepared a works-for-me kind of dirty fix attached. on gentoo I put this into /etc/portage/patches/kde-apps/rocs/ and enable the various userpatch stuff. the downside is I now need to give the extension explicitely and don't select it from dropdown menus. would be nice if it got fixed properly though...
Comment 1 Andreas Cord-Landwehr 2017-05-26 15:31:49 UTC
Git commit b8cc5ef420474cadf3a506527bebde09ac36e3f9 by Andreas Cord-Landwehr.
Committed on 26/05/2017 at 15:29.
Pushed by cordlandwehr into branch 'master'.

Fix graph export filter

Includes:
- add message boxes if anything goes fatally wrong (i.e. no data is written)
- fix generation of export filters
- deduce export plugin from selected filter and not from file suffix, since
  that is not relyable

M  +21   -15   src/ui/fileformatdialog.cpp

https://commits.kde.org/rocs/b8cc5ef420474cadf3a506527bebde09ac36e3f9