Fix graph export filter

Includes:
- add message boxes if anything goes fatally wrong (i.e. no data is written)
- fix generation of export filters
- deduce export plugin from selected filter and not from file suffix, since
  that is not relyable

BUG: 378095